adding parser (generate frame from camera pixel)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ install(DIRECTORY
 catkin_install_python(PROGRAMS
     nodes/rviz_viewer.py
     nodes/start_here.py
+    nodes/parser
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 
