Add snaping to point of interest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ catkin_install_python(PROGRAMS
     nodes/parser
     nodes/planner
     nodes/mover
+    nodes/poi
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 
