--- a/config/transforms.yaml
+++ b/config/transforms.yaml
@@ -1,7 +1,10 @@
-camera_transform: 1.28899773261 0.0451563000909 0.0526213457964 -0.327067059729 0.0141851772913
-  0.944450848734 -0.0289570449476 camera_base panda_link0
+external_camera_transform: 1.2972526 0.149557681884 -0.163340759238 -0.234495311061
+  0.0108545598021 0.966194832152 -0.106591138871 external_camera_base panda_link0
+external_view_transform: 1.093 -0.072 0.743 0.662 0.542 -0.315 -0.411 panda_link0 external_view
+internal_camera_transform: 0 0 0 0 0 0 1 camera_base internal_camera_base
 jungle_transform: 0.619975368493 -0.226304921687 0.00120209212324 -0.0237142798232
   -0.999637818422 0.0101843198189 0.00762485588404 panda_link0 tag_2
 relaxed_ik_transform: 0.306323448384 -0.00012161987809 0.487079171779 0 0 0 1 panda_link0
   rel_ik_zero
+rgb_camera_transform: -0.004 -0.032 -0.000 0.503 -0.500 0.499 -0.498 camera_base rgb_camera_link
 sim_ee_transform: 0 0 0.1033995 1 0 0 0 panda_hand sim_end_effector
