--- a/config/transforms.yaml
+++ b/config/transforms.yaml
@@ -2,6 +2,7 @@ external_camera_transform: 1.2972526 0.149557681884 -0.163340759238 -0.234495311
   0.0108545598021 0.966194832152 -0.106591138871 external_camera_base panda_link0
 external_view_transform: 1.093 -0.072 0.743 0.662 0.542 -0.315 -0.411 panda_link0 external_view
 internal_camera_transform: 0 0 0 0 0 0 1 camera_base internal_camera_base
+go_camera_transform: -0.026 0.062 0.229 0.717 -0.697 -0.011 -0.006 camera1 go_camera
 jungle_transform: 0.619975368493 -0.226304921687 0.00120209212324 -0.0237142798232
   -0.999637818422 0.0101843198189 0.00762485588404 panda_link0 tag_2
 relaxed_ik_transform: 0.306323448384 -0.00012161987809 0.487079171779 0 0 0 1 panda_link0
