--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ catkin_install_python(PROGRAMS
     nodes/tracker
     nodes/clipping_task
     nodes/folding_task
+    nodes/rviz_manager
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(TARGETS pandaJacob
