--- a/package.xml
+++ b/package.xml
@@ -42,12 +42,19 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>tf</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>OpenCV</build_depend>
+  <build_depend>rviz_camera_stream</build_depend>
+  <build_depend>ros_numpy</build_depend>
+  <build_depend>authoring_msgs</build_depend>
+  <build_depend>panda_ros_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <run_depend>tf</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>OpenCV</run_depend>
+  <run_depend>rviz_camera_stream</run_depend>
+  <run_depend>ros_numpy</run_depend>
+  <run_depend>authoring_msgs</run_depend>
+  <run_depend>panda_ros_msgs</run_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <!--<export>
