Add new camera control

--- a/config/transforms.yaml
+++ b/config/transforms.yaml
@@ -13,3 +13,4 @@ relaxed_ik_transform: 0.306323448384 -0.00012161987809 0.487079171779 0 0 0 1 pa
   rel_ik_zero
 rgb_camera_transform: -0.004 -0.032 -0.000 0.503 -0.500 0.499 -0.498 camera_base rgb_camera_link
 sim_ee_transform: 0 0 0.1033995 1 0 0 0 panda_hand sim_end_effector
+rotated_camera: 0 0 0 0.707106 -0.707106 0 0 internal_rgb_camera_link rotated_camera
