--- a/package.xml
+++ b/package.xml
@@ -53,8 +53,8 @@
   <run_depend>ros_numpy</run_depend>
   <run_depend>authoring_msgs</run_depend>
   <run_depend>panda_ros_msgs</run_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <!--<export>
