--- a/config/transforms.yaml
+++ b/config/transforms.yaml
@@ -2,15 +2,15 @@ external_camera_transform: 1.2972526 0.149557681884 -0.163340759238 -0.234495311
   0.0108545598021 0.966194832152 -0.106591138871 external_camera_base panda_link0
 external_view_transform: 1.1 0 0.75 0.5879378 0.5879378 -0.3928474 -0.3928474 panda_link0 external_view
 internal_camera_transform: 0 0 0 0 0 0 1 camera_base internal_camera_base
-sim_robot_transform: 0 0 0 0 0 0 1 sim_end_effector end_effector
+sim_robot_transform: 0 0 0 0 0 0 1 sim_panda_gripper panda_gripper
 static_cloud_transform: 0.422 -0.005 0.656 -0.702 0.713 -0.001 -0.000 panda_link0 static_camera_link
 static_cloud_transform_old: 0.249 -0.029 0.838 0.726 -0.688 -0.011 0.006 panda_link0 static_camera_link
-fake_camera_transform: 0.063 -0.004 0.098 -0.707 0.707 0.002 -0.004 end_effector internal_rgb_camera_link
+fake_camera_transform: 0.063 -0.004 0.098 -0.707 0.707 0.002 -0.004 panda_gripper internal_rgb_camera_link
 go_camera_transform: -0.026 0.062 0.229 0.717 -0.697 -0.011 -0.006 camera1 go_camera
 jungle_transform: 0.619975368493 -0.226304921687 0.00120209212324 -0.0237142798232
   -0.999637818422 0.0101843198189 0.00762485588404 panda_link0 tag_2
 relaxed_ik_transform: 0.306323448384 -0.00012161987809 0.487079171779 0 0 0 1 panda_link0
   rel_ik_zero
 rgb_camera_transform: -0.004 -0.032 -0.000 0.503 -0.500 0.499 -0.498 camera_base rgb_camera_link
-sim_ee_transform: 0 0 0.1033995 1 0 0 0 panda_hand sim_end_effector
+sim_ee_transform: 0 0 0.1033995 1 0 0 0 panda_hand sim_panda_gripper
 rotated_camera: 0 0 0 0.707106 -0.707106 0 0 internal_rgb_camera_link rotated_camera
