Adding object detection with detectron

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,8 @@ catkin_install_python(PROGRAMS
     nodes/rviz_manager
     nodes/recorder
     nodes/socket
+    nodes/test
+    nodes/detector
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(TARGETS pandaJacob
